--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,16 @@
 [submodule "oh-my-zsh"]
-	path = oh-my-zsh
+	path = zsh/oh-my-zsh
 	url = git://github.com/robbyrussell/oh-my-zsh.git
     ignore = dirty
 [submodule "bullet-train-oh-my-zsh-theme"]
-	path = bullet-train-oh-my-zsh-theme
+	path = zsh/bullet-train-oh-my-zsh-theme
 	url = https://github.com/caiogondim/bullet-train-oh-my-zsh-theme
     ignore = dirty
+[submodule "zsh-syntax-highlighting"]
+	path = zsh/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+	ignore = dirty
+[submodule "zsh-autosuggestions"]
+	path = zsh/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions.git
+	ignore = dirty
